Closed Bug 42186 Opened 26 years ago Closed 26 years ago

Incorrect conversion of GdkColor to nscolor

Categories

(Core :: XUL, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: bryner, Assigned: bryner)

References

Details

(Whiteboard: [nsbeta2+][w/b minus on 6/22])

Attachments

(1 file)

GdkColor contains a 16-bit value for the red, green, and blue components. nscolor contains 8-bit values. We want the most significant bits of the 16-bit value, so we need to right shift 8. Patch coming up (r=pavlov, blizzard).
This blocks implementing the classic skin on unix, because it causes the system colors to be incorrect.
Blocks: 41272
Status: NEW → ASSIGNED
Keywords: nsbeta2
Attached patch Fix for bugSplinter Review
The patch I just attached also returns a color for the scrollbar, returns (I think) a more accurate color for buttonhighlight and threedhighlight, and returns the original intended color for buttonshadow/threedshadow/threeddarkshadow.
Putting on [nsbeta2+][w/b minus on 6/22] radar.
Whiteboard: [nsbeta2+][w/b minus on 6/22]
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
verified (if bryner says so :-])
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: