Fix bug 42186 - incorrect GdkColor to nscolor conversion.  Also change some of the CSS system colors to be more accurate.  r=blizzard,pavlov.